...
            "state": "translated",
            "value": "Le modèle distant par défaut est soumis à des limites de temps"
          }
        }
      }
    },
    "Delete": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "删除"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "刪除"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Eliminar"
...
            "state": "translated",
            "value": "Saturation"
          }
        }
      }
    },
    "Save": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "保存"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "儲存"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardar"
...
